--- a/style.css
+++ b/style.css
@@ -97,3 +97,8 @@ Twenty Twenty-One is distributed under the terms of the GNU GPL.
 /* Categories 01 to 03 are the basics. */
 
 /* Variables */
+
+
+.image1{
+border-radius: 30px
+}
